Set the backgroudn color to pink.

--- a/alee13.html
+++ b/alee13.html
@@ -7,6 +7,10 @@
 <body>
 Hello world!
 Alex Lee
-I'm enjoying this git assignment, this class, and the professor.
 </body>
 </html>
+<html>
+<head>
+<title> Test Page </title>
+<link rel="stylesheet" type="text/css" href="style.css" />
+</head>
